# milos_noctalia

./: .gitignore  Cargo.toml  README.md  askama.toml  flake.default.nix  flake.nix  milos  test_generation.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.planning/debug/: theme-permission-denied.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-01-29-nixos-config-implementation.md  2026-01-29-reproducible-nixos-config-design.md
home/: ahmed.nix  default.nix  milgraph.nix
hosts/ElMakina/: configuration.nix
hosts/default/: configuration.nix
hosts/nixos/: configuration.nix  hardware-configuration.nix
milos-output/: flake.nix  nix.conf
milos-output/modules/: git.nix  locale.nix  noctalia.nix  users.nix
modules/applications/: browsers.nix  terminals.nix  utilities.nix
modules/desktop/: audio.nix  fonts.nix  niri.nix  wayland.nix
modules/development/: editors.nix  tools.nix
modules/system/: boot.nix  hardware.nix  locale.nix  networking-elmakina.nix  networking.nix  security.nix  ssh.nix  users-ahmed.nix  users.default.nix  users.nix
src/: error.rs  event.rs  lib.rs  logo.rs  main.rs  state.rs  wizard.rs
src/executor/: command.rs  error.rs  git.rs  mod.rs  nixos.rs  output.rs
src/generator/: context.rs  error.rs  flake.rs  git.rs  locale.rs  mod.rs  niri.rs  nixconf.rs  noctalia.rs  users.rs  validate.rs  write.rs
templates/: nix.conf  users.nix
(+84 files in other folders)
