[package]
name = "milos_niri"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6"
askama = "0.15"
atomicwrites = "0.4"
thiserror = "1.0"
anyhow = "1.0"
regex = "1"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "milos_niri"
path = "src/main.rs"
